Put the API endpoint in the `ENV`
Because genericisation

--- a/env.example
+++ b/env.example
@@ -1,3 +1,7 @@
 RACKSPACE_USERNAME=''
 RACKSPACE_API_KEY=''
 RACKSPACE_DB_CONTAINER=''
+RACKSPACE_API_ENDPOINT=''
+
+MYSQL_USERNAME='root'
+MYSQL_PASSWORD=''
