Add RACKSPACE_REGION to env

--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 RACKSPACE_USERNAME=''
 RACKSPACE_API_KEY=''
 RACKSPACE_DB_CONTAINER=''
-RACKSPACE_API_ENDPOINT=''
+RACKSPACE_REGION='' # For example, 'lon' for UK
 
 MYSQL_USERNAME='root'
 MYSQL_PASSWORD=''
