Add extra stuff to env.example

--- a/env.example
+++ b/env.example
@@ -3,5 +3,8 @@ RACKSPACE_API_KEY=''
 RACKSPACE_DB_CONTAINER=''
 RACKSPACE_REGION='' # For example, 'lon' for UK
 
-MYSQL_USERNAME='root'
+MYSQL_HOST=''
+MYSQL_USERNAME=''
 MYSQL_PASSWORD=''
+
+DB_CREDS_FILE='' # Optional - defaults to the relative path of the project
